[package]
name = "rust-git-lite"
version = "0.1.0"
authors = ["etcetera <hubertetcetera@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.47", features = ["derive"] }
flate2 = "1.0.34"                                # compression
log = "0.4.28"
thiserror = "1.0.38"                             # error handling
