[package]
name = "rust-git-lite"
version = "0.1.0"
authors = ["etcetera <hubertetcetera@gmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.47", features = ["derive"] }
flate2 = "1.0.34"                                # compression
gag = "1.0.0"
hex = "0.4.3"
is_executable = "1.0.5"
log = "0.4.28"
sha1 = "0.10.6"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "1.0.38"                             # error handling
